ingress/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: db3000-https-redirect
spec:
  parentRefs:
    - name: db3000-gateway
      namespace: db3000
      sectionName: http
      kind: Gateway
  hostnames:
    - db3000.xmple.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
